# sales_forecasting

./: .gitignore  README.md  exploratory_data_analysis.rmd  pyproject.toml
mlruns/0/: meta.yaml
notebooks/: Exploratory Data Analysis.ipynb  Machine Learning.ipynb  exploratory_data_analysis.ipynb  machine_learning.html  machine_learning.ipynb  test.ipynb
notebooks/.ipynb_checkpoints/: machine_learning-checkpoint.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/426717815962166184/: meta.yaml
notebooks/mlruns/426717815962166184/22e93af38226436dae7025eff6916816/: meta.yaml
notebooks/mlruns/426717815962166184/22e93af38226436dae7025eff6916816/metrics/: daily_smape  monthly_smape  weekly_smape
notebooks/mlruns/426717815962166184/22e93af38226436dae7025eff6916816/tags/: mlflow.log-model.history
notebooks/mlruns/426717815962166184/c696d443f712491f9958c2d8d7df508f/: meta.yaml
notebooks/mlruns/426717815962166184/da303c752b6e4dfca9d0aafaee15ebb5/: meta.yaml
notebooks/mlruns/864099896015296754/: meta.yaml
notebooks/mlruns/864099896015296754/1662a46d25e34f529dedbc25e6beac80/: meta.yaml
notebooks/mlruns/864099896015296754/669d4895fd1b4c1a923e5663a6d152d0/: meta.yaml
notebooks/mlruns/864099896015296754/a5c320bb0a3c4d7aad03128176c5664a/: meta.yaml
src/sales_forecasting/api/: model.py
src/sales_forecasting/domain/: sales.py
src/sales_forecasting/sales_prediction/: sales_model.py
src/sales_forecasting/utils/: evaluation.py  feature_engineering.py  ml.py  preprocessing.py
(+33 files in other folders)
