[tool.poetry]
name = "sales_forecasting"
version = "0.1.0"
description = ""
authors = ["andreeadeselnicu <adeselnicu@yahoo.com>"]

[tool.poetry.dependencies]
python = "3.7.2"
scikit-learn = "^0.24.2"
pandas = "^1.2.4"
numpy = "^1.20.2"
pydantic = "^1.8.1"
ipykernel = "^5.5.3"

[tool.poetry.dev-dependencies]
ipython = "^7.22.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
